@@ -1,6 +1,8 @@
 class Example
   class CodePanel
     include Dispatch
+    include Gluon::Controller
+    include Gluon::ERBView
 
     gluon_path_filter EXAMPLE_FILTER
 
